tidy: change health check, eanb;e actuator
